# strux-ontology

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: activity_profiles.yaml  korean_semantic_lexicon.yaml  major_profiles.yaml  market_signal_rules.yaml  skill_bridges.yaml
docs/: datasets.md  ontology-design.md
examples/: student_profile.json
src/strux/: __init__.py  __main__.py  cli.py  runtime.py  settings.py
src/strux/api/: app.py
src/strux/api/static/: app.js  styles.css
src/strux/api/templates/: index.html
src/strux/config/: __init__.py  profiles.py
src/strux/decision/: __init__.py  models.py  pathing.py  recommender.py
src/strux/interpretation/: __init__.py  models.py  normalization.py  openai_profile.py
src/strux/ontology/: __init__.py  builder.py  graph.py  model.py  semantics.py
src/strux/presentation/: __init__.py  korean.py
src/strux/raw/: __init__.py  datasets.py
tests/: test_api.py  test_builder.py  test_interpretation.py  test_pathing.py  test_recommender.py
